alteração de lista

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Treinamento Git</title>
 </head>
 <body>
-        Treinamento Git Para Fodões do git hub
-        html alterado por zeh clone
+       <ul>
+           <h1>Lista</h1>
+           <li>Atualização</li>
+           <li>de</li>
+           <li>Lista</li>
+       </ul>
     
 </body>
 </html>
