--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Treinamento Git</title>
 </head>
 <body>
-       <ul>
-           <h1>Lista</h1>
-           <li>Atualização</li>
-           <li>de</li>
-           <li>Lista</li>
-       </ul>
-    
+    <ul>
+        <h1>Lista</h1>
+        <li>Atualização de lista</li>
+    </ul>
+        <h1>Titulo responsavel zehClone</h1>    
 </body>
 </html>
