--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <h1>Lista</h1>
         <li>Atualização de lista</li>
     </ul>
-<<<<<<< HEAD
         <h1>Titulo De Curso GitAlura</h1>    
-=======
-        <h1>Titulo responsavel zehClone</h1>    
-
->>>>>>> 133f53f823e8be397ff15f853bb43f3b79bc4e13
+        <h2>Continuando Atualização</h2>
 </body>
 </html>
