--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
     <ul>
-        <h1>Lista Atualizada depois porém antes</h1>
-        <li>Atualização de lista</li>
+        <h1>Lista</h1>
+        <li>Atualização de lista para depois</li>
     </ul>
         <h1>Titulo De Curso GitAlura</h1>    
-        <h2>Continuando Atualização</h2>
+        <h2>Continuando Atualização atual</h2>
 </body>
 </html>
